ls-tokyo/kubekube/ns-baql/50-api-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: baql
  labels:
    app: api-server
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: baql
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: ghcr.io/hellodhlyn/baql:v2.0.0-rc5
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 3000
              name: api-server-port
          livenessProbe:
            httpGet:
              path: /up
              port: api-server-port
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /up
              port: api-server-port
            initialDelaySeconds: 30
