ls-tokyo/kubekube/ns-baql/51-rank-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rank-server
  namespace: baql
  labels:
    app: rank-server
spec:
  type: NodePort
  selector:
    app: rank-server
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rank-server
  namespace: baql
  labels:
    app: rank-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rank-server
  template:
    metadata:
      labels:
        app: rank-server
    spec:
      containers:
        - name: rank-server
          image: ghcr.io/dtrippers/mollulog-ranks:v0.2.0
          resources:
            requests:
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          ports:
            - containerPort: 8080
              name: http-port
          startupProbe:
            httpGet:
              path: /health
              port: http-port
            failureThreshold: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http-port
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http-port
            initialDelaySeconds: 10
      tolerations:
        - effect: NoSchedule
          key: cluster
          value: mac-seoul
