ls-tokyo/kubekube/ns-baql/90-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
  namespace: baql
spec:
  ingressClassName: traefik
  rules:
    - host: baql.mollulog.net
      http:
        paths:
          - path: /graphql
            pathType: Exact
            backend:
              service:
                name: api-server
                port:
                  number: 3000
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 3000
    - host: ranks.mollulog.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rank-server
                port:
                  number: 8080
  tls:
    - secretName: baql-tls
      hosts:
        - baql.mollulog.net
        - ranks.mollulog.net
